<resources>
    <string name="app_name">MADmodelPaper</string>
    <string name="Home">Home</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="ProfileManagement">Profile Management</string>
    <string name="dob">Date of Birth</string>
    <string name="add">Add</string>
    <string name="update_profile">Update Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>
</resources>